# FastAPI_Study

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: start.sh
src/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
src/sql_app/tests/: conftest.py  test_api.py
terraform/: main.tf  outputs.tf  run_terraform.sh  terraform.tfstate.1744620713.backup  tfplan  tfvars_to_env.py  variables.tf
